infrastructure/elki-os/ingress-traefik/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: ingress-traefik
spec:
  basicAuth:
    secret: authsecret
