infrastructure/elki-os/ingress-traefik/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-traefik-dashboard
spec:
  type: ClusterIP
  ports:
    - targetPort: web
      port: 80
  selector:
    app: ingress-traefik
