infrastructure/elki-os/ingress-traefik/ingress-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-traefik-route
  namespace: ingress-traefik
spec:
  entryPoints: # [1]
    - web
  routes: # [2]
    - kind: Rule
      match: Host(`elb.fammoldenhauer.de`) # [3]
      priority: 10 # [4]
      middlewares: # [5]
        - name: auth-middleware # [6]
          namespace: ingress-traefik # [7]
      services: # [8]
        - kind: Service
          name: ingress-traefik-dashboard
          namespace: ingress-traefik
          passHostHeader: true
          port: 80 # [9]
          responseForwarding:
            flushInterval: 1ms
          scheme: https
          serversTransport: transport # [10]
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
              sameSite: none
              maxAge: 42
          strategy: RoundRobin
          weight: 10
          nativeLB: true # [11]
  # tls: # [12]
  #   secretName: supersecret # [13]
  #   options: # [14]
  #     name: opt # [15]
  #     namespace: default # [16]
  #   certResolver: cloudflare # [17]
  #   domains: # [18]
  #     - main: fammoldenhauer.de # [19]
  #       sans: # [20]
  #         - "*.fammoldenhauer.de"
